--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DC</title>
+
+    <link rel="stylesheet" href="style.css"
+
+</head>
+
+<body>
+
+    <div class="wrapper">
+
+        <img src="images-dc/images/logo.png">
+
+        <h1>FEATURED</h1>
+
+        <div class="featured">
+
+            <div class="item">
+                <img src="images-dc/images/featured_all_acces.jpg">
+                <h3>DC All Access</h3>
+            </div>
+            <div class="item wonderwoman">
+            <img src="images-dc/images/featured_wonderwoman.jpg">
+                <h3>Wonder Woman</h3>
+            </div>      
+
+        </div>
+
+        <h1>WHO'S WHO</h1>
+
+        <div class="whoswho">
+
+            <div class="superman">
+                <img src="images-dc/images/superman.jpg">
+                <h3>Superman</h3>
+            </div>
+
+            <div class="batman">
+                <img src="images-dc/images/batman.jpg">
+                <h3>Batman</h3>
+            </div>
+
+            <div class="wonderwoman2">
+                <img src="images-dc/images/wonderwoman.jpg">
+                <h3>Wonderwoman</h3>
+            </div>
+
+            <div class="greenlantern">
+                <img src="images-dc/images/greenlantern.jpg">
+                <h3>Green Lantern</h3>
+            </div>
+
+            <div class="flash">
+                <img src="images-dc/images/flash.jpg">
+                <h3>The Flash</h3>
+            </div>
+
+        </div>
+
+    </div>
+    
+</body>
+</html>
